<resources>
    <string name="app_name">VoiceTubeTest</string>
    <string name="title_home">Home</string>
    <string name="title_countdown">CountDown</string>
    <string name="title_setting">Setting</string>


    <!--General-->
    <string name="internet_not_connected">您尚未連接 Internet</string>
    <string name="you_know_nothing">You know nothing</string>


    <!--Setting-->
    <string name="play">播放</string>
    <string name="auto_play">自動撥放</string>
    <string name="subtitle_sync">字幕同步</string>
    <string name="stop_play_in_checking">查詢單字時暫停播放</string>
    <string name="recommend_video_notification">推薦影片提醒</string>
    <string name="learn_notification">學習通知</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="count_second">欲倒數秒數</string>
    <string name="start">Count Start</string>
    <string name="resume">Count Resume</string>
    <string name="stop">Count Stop</string>
    <string name="pause">Count Pause</string>
    <string name="time_remaining">倒數時間</string>
    <string name="init_time_second">0</string>
</resources>
